--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "mean-stack-crud-app",
-  "version": "0.0.0",
+  "name": "Angular-CRUD",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "nodemonlog": "nodemon -L",
+    "nodemondelay": "nodemon --delay 2500ms serve"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +48,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "nodemon": "2.0.4"
   }
 }
